# react-native-ndk-benchmark

./: .gitignore  README.md  app.json  package.json
android/: settings.gradle
android/app/: CMakeLists.txt  build.gradle
android/app/src/debug/java/com/androidbenchmark/: ReactNativeFlipper.java
android/app/src/main/cpp/: benchmark-lib.cpp  benchmark_jsi.h  benchmark_locking.h
android/app/src/main/java/com/androidbenchmark/: MainActivity.java  MainActivity.kt  MainApplication.java  MainApplication.kt
android/app/src/main/res/values/: strings.xml
android/app/src/release/java/com/androidbenchmark/: ReactNativeFlipper.java
ios/: Podfile
ios/AndroidBenchmark/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
ios/AndroidBenchmark.xcodeproj/: project.pbxproj
ios/AndroidBenchmark.xcodeproj/xcshareddata/xcschemes/: AndroidBenchmark.xcscheme
ios/AndroidBenchmark.xcworkspace/: contents.xcworkspacedata
ios/AndroidBenchmarkTests/: AndroidBenchmarkTests.m
